--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     // Logging interceptor
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
+    // Circle ImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
